--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             padding: 25px;
             margin-top: 20px;
             position: relative;
+            align-content: center;
         }
         header {
             text-align: center;
@@ -78,7 +79,6 @@
             white-space: pre-line;
             text-align: justify;
             line-height: 1.9;
-            text-indent: 2em;
             margin: 0 10px;
         }
         .navigation {
