--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             color: #333;
             line-height: 1.6;
             padding: 20px;
-            max-width: 800px;
+            max-width: 85%;
             margin: 0 auto;
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             min-height: 100vh;
@@ -78,7 +78,6 @@
             white-space: pre-line;
             text-align: justify;
             line-height: 1.9;
-            text-indent: 2em;
             margin: 0 10px;
         }
         .navigation {
