--- a/index.html
+++ b/index.html
@@ -257,15 +257,15 @@
     
 
     
-    <div id="novel-container" class="container">
-            <div class="book-selector">
-                <select id="book-select">
-                    <option value="novel1.txt">小说一</option>
-                    <option value="novel2.txt">小说二</option>
-                    <option value="novel3.txt">小说三</option>
-                </select>
-            </div>
-        <div class="loading">
+    <div class="container">
+        <div class="book-selector">
+            <select id="book-select">
+                <option value="novel1.txt">小说一</option>
+                <option value="novel2.txt">小说二</option>
+                <option value="novel3.txt">小说三</option>
+            </select>
+        </div>
+        <div class="loading" id="novel-container">
             <div class="spinner"></div>
             <p>正在加载小说内容...</p>
         </div>
